--- a/gallery.html
+++ b/gallery.html
@@ -63,102 +63,117 @@
            <div class="row">
                 <div class="column">
                     <figure>
-                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.vanityfair.com%2Fphotos%2F586413ae12f608c91db97830%2F2%3A3%2Fw_640%2Ch_960%2Cc_limit%2Fariana-grande-best-year-2016.jpg&imgrefurl=https%3A%2F%2Fwww.vanityfair.com%2Fstyle%2F2016%2F12%2Fariana-grande-best-2016&tbnid=ILZq5O85JLaA3M&vet=12ahUKEwiThpDl0p7vAhUO_RoKHbFzAJcQMygBegUIARDSAQ..i&docid=Gr7csXlKv7AB9M&w=640&h=960&q=ariana%20grande&ved=2ahUKEwiThpDl0p7vAhUO_RoKHbFzAJcQMygBegUIARDSAQ height="150px" width="250px"><figcaption>Profile</figcaption>
+                    <img src="images/image1.jpg"150px" width="250px"><figcaption>Profile</figcaption>
                 </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.npr.org%2Fassets%2Fimg%2F2020%2F10%2F29%2Fshot-7-photo-credit_-dave-meyers-min_wide-b999c4a2d31c0d1b66a973be271aa9d51931fcf1.jpg&imgrefurl=https%3A%2F%2Fwww.npr.org%2F2020%2F10%2F30%2F926671488%2Fariana-grande-releases-new-album-positions-her-most-explicit-to-date&tbnid=Jc3clRW9ZoKLZM&vet=12ahUKEwiThpDl0p7vAhUO_RoKHbFzAJcQMygCegUIARDUAQ..i&docid=JkAj8WOg_b6arM&w=4383&h=2465&q=ariana%20grande&ved=2ahUKEwiThpDl0p7vAhUO_RoKHbFzAJcQMygCegUIARDUAQ" height="150px" width="250px"><figcaption>Dancing</figcaption>
+                    <img src="images/image2.jpg" height="150px" width="250px"><figcaption>Dancing</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image3.jpg" height="150px" width="250px"><figcaption>Having fun</figcaption>
+                    <img src="images/image3.jpg" height="150px" width="250px"><figcaption>Having fun</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image4.jpg" height="150px" width="250px"><figcaption>Innocent</figcaption>
+                    <img src="images/image4.jpg" height="150px" width="250px"><figcaption>Innocent</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image5.jpg" height="150px" width="250px"><figcaption>Chill</figcaption>
+                    <img src="images/image5.jpg" height="150px" width="250px"><figcaption>Chill</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image6.jpg" height="150px" width="250px"><figcaption>Vacation</figcaption>
+                    <img src="images/image6.jpg" height="150px" width="250px"><figcaption>Vacation</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image7.jpg" height="150px" width="250px"><figcaption>Selfie</figcaption>
+                    <img src="images/image7.jpg" height="150px" width="250px"><figcaption>Selfie</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image8.jpg" height="150px" width="250px"><figcaption>Hobbies</figcaption>
+                    <img src="images/image8.jpg" height="150px" width="250px"><figcaption>Hobbies</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image9.jpg" height="150px" width="250px"><figcaption>Shoot</figcaption>
+                    <img src="images/image9.jpg" height="150px" width="250px"><figcaption>Shoot</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image10.jpg" height="150px" width="250px"><figcaption>Chill out with artist</figcaption>
+                    <img src="images/image10.jpg" height="150px" width="250px"><figcaption>Chill out with artist</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image7.jpg" height="150px" width="250px"><figcaption>Selfie</figcaption>
+                    <img src="images/image7.jpg" height="150px" width="250px"><figcaption>Selfie</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image8.jpg" height="150px" width="250px"><figcaption>Hobbies</figcaption>
+                    <img src="images/image8.jpg" height="150px" width="250px"><figcaption>Hobbies</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image9.jpg" height="150px" width="250px"><figcaption>Shoot</figcaption>
+                    <img src="images/image9.jpg" height="150px" width="250px"><figcaption>Shoot</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image10.jpg" height="150px" width="250px"><figcaption>Chill out with artist</figcaption>
+                    <img src="images/image10.jpg" height="150px" width="250px"><figcaption>Chill out with artist</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image1.jpg" height="150px" width="250px"><figcaption>Profile</figcaption>
+                    <img src="images/image1.jpg" height="150px" width="250px"><figcaption>Profile</figcaption>
                 </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image2.jpg" height="150px" width="250px"><figcaption>Dancing</figcaption>
+                    <img src="images/image2.jpg" height="150px" width="250px"><figcaption>Dancing</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image3.jpg" height="150px" width="250px"><figcaption>Having fun</figcaption>
+                    <img src="images/image3.jpg" height="150px" width="250px"><figcaption>Having fun</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image4.jpg" height="150px" width="250px"><figcaption>Innocent</figcaption>
+                    <img src="images/image4.jpg" height="150px" width="250px"><figcaption>Innocent</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image5.jpg" height="150px" width="250px"><figcaption>Chill</figcaption>
+                    <img src="images/image5.jpg" height="150px" width="250px"><figcaption>Chill</figcaption>
                     </figure>
                 </div>
                 <div class="column">
                     <figure>
-                    <img src="image6.jpg" height="150px" width="250px"><figcaption>Vacation</figcaption>
+                    <img src="images/image6.jpg" height="150px" width="250px"><figcaption>Vacation</figcaption>
+                    </figure>
+                </div>
+                <div class="column">
+                    <figure>
+                    <img src="images/image8.jpg" height="150px" width="250px"><figcaption>Vacation</figcaption>
+                    </figure>
+                </div>
+                <div class="column">
+                    <figure>
+                    <img src="images/image3.jpg" height="150px" width="250px"><figcaption>Vacation</figcaption>
+                    </figure>
+                </div>
+                <div class="column">
+                    <figure>
+                    <img src="images/image10.jpg" height="150px" width="250px"><figcaption>Vacation</figcaption>
                     </figure>
                 </div>
             </div>
